example-data-pipelines/hydroLineage/k8s/namespace.yaml
# SPDX-License-Identifier: Apache-2.0
#
# © Crown Copyright 2026. This work has been developed by the National Digital Twin
# Programme and is legally attributed to the UK's Department for Business, Innovation, Science and Trade (BIST) as the governing
# entity

apiVersion: v1
kind: Namespace
metadata:
  name: hydro-lineage
  labels:
    name: hydro-lineage
    app: hydro-lineage
